@@ -84,3 +84,4 @@ Collate:
     'HR.R'
     'space.R'
     'WP.R'
+    'SC.R'
