@@ -26,6 +26,7 @@ export(QC)
 export(QQ)
 export(rdirs)
 export(reveal.js)
+export(SC)
 export(sync)
 export(sync_img)
 export(sync_rnp)
