@@ -29,6 +29,7 @@ list(
         "HR",
         "HS",
         "IM",
+        "SC",
         "YT"
       )
     ),    
