@@ -44,6 +44,8 @@ NEW FEATURES
 * spacing functions `HS` (horizontal space) and `VS` (vertical space) have been 
   added.
 
+* `SC` a function to quickly generate special HTML characters.
+
 MINOR FEATURES
 
 * `notes` is a function that allows the user to view a truncated version of the 
